# OpenCFU

./: .gitignore  5.  AUTHORS  Dockerfile  INSTALL  Makefile.am  NEWS  OpenCFU-bak.tex  OpenCFU.bbl  OpenCFU.blg  OpenCFU.cbp  OpenCFU.cscope_file_list  OpenCFU.dvi  OpenCFU.layout  OpenCFU.loc  OpenCFU.tex-bak  OpenCFU.tex-old  OpenCFU.tex.backup  OpenCFU_Bib.bib  OpenCFU_Bib.bib-back  README.md  TODO  aclocal.m4  configure  configure.ac  index.html  notes.txt  params.json  plosReply.txt
data/: trainedClassifier.xml  trainedClassifierPS.xml
djangoCFU/: db.sqlite3  manage.py
djangoCFU/djangoCFU/: settings.py  urls.py  wsgi.py
djangoCFU/onlineCFU/: admin.py  forms.py  models.py  views.py
figAccuracy/: Q120404.R  fig3A.eps  fig3BTEXT.eps  newResults.ods  nice.csv  params  results.csv  results.ods  resultsOld.csv  table.ods
figAccuracy/images/: q120404-01.tif  q120404-03.tif  q120404-05.tif  q120404-08.tif  q120404-09.tif  q120404-10.tif  q120404-11.tif  q120404-14.tif  q120404-15.tif  q120404-19.tif
figAccuracy/webcamScreenShotCroped/: A.jpg.tif  B.jpg.tif  C.jpg.tif  D.jpg.tif  E.jpg.tif  F.jpg.tif  G.jpg.tif  H.jpg.tif  I.jpg.tif  J.jpg.tif  K.jpg.tif  L.jpg.tif  M.jpg.tif  N.jpg.tif  O.jpg.tif  P.jpg.tif  Q.jpg.tif  R.jpg.tif  S.jpg.tif
figPipeline/: A2_.tif  B2_.tif  BB_.tif  B_.tif  C2_.tif  CC_.tif  C_.tif  D2_.tif  DD_.tif  D_.tif  E2_.tif  EE_.tif  E_.tif  F2_.tif  arrows.eps  crop-A2_.tif  crop-AA_.tif  crop-A_.tif  crop-B2_.tif  crop-BB_.tif  crop-B_.tif  crop-C2_.tif  crop-CC_.tif  crop-C_.tif  crop-D2_.tif  crop-DD_.tif  crop-D_.tif  crop-E2_.tif  crop-EE_.tif  crop-E_.tif  crop-F2_.tif  crop-FF_.tif  crop-F_.tif  fig1.tif  figFlowChart.eps  figPipeline.sh  flowChart.eps  flowChart.graphml  flowChartTEXT.eps
figRobust/: fig5B.eps  fig5C.eps
figRobust/Bubbles/: fig3C.eps  result.csv  script.R
figRobust/Edge-25px/: fig3B.eps  figEdge.R
figRobust/Edge-25px/images/: q120404-01.tif  q120404-02.tif  q120404-03.tif  q120404-04.tif  q120404-05.tif  q120404-06.tif  q120404-07.tif  q120404-08.tif  q120404-09.tif  q120404-10.tif  q120404-11.tif  q120404-12.tif  q120404-13.tif  q120404-14.tif  q120404-15.tif  q120404-16.tif  q120404-17.tif  q120404-18.tif  q120404-19.tif
figRobust/Qualit/: IJ-edge.tif  Nice-crack.tif  Nice-edge.tif  OCFU-crack.tif  OCFU-edge.tif  Orig-bubble.tif  Orig-dust.tif  fig3A.tif  figRobustQualit.sh
figRobust/exampleBorder/: Orig-edge.tif
figRobust/exampleBubble/: IJ-bubble.tif  Nice-bubble.tif  OCFU-bubble.tif
figRobust/exampleCrack/: IJ-crack.tif  Orig-crack.tif
figRobust/exampleDust/: IJ-dust.tif  Nice-dust.tif  Ori-dust.tif
figSpeed/: fig2A.eps  makeFig.sh  results.csv  script.R  stitchedOrScaled.eps
figSpeed/data/: Mont4.tif  miniSample.tif
figVersa/: A.tiff  Aa.tiff  B.tiff  BB.tiff  C.tiff  CC.tiff  D.tiff  DD.tiff  E.tiff  EE.tiff  F.tiff  FF.tiff  fig6.eps  figVersa.sh  figVersa.tif  valid-A.tiff  valid-Aa.tiff  valid-B.tiff  valid-BB.tiff  valid-C.tiff  valid-CC.tiff  valid-D.tiff  valid-DD.tiff  valid-E.tiff  valid-EE.tiff  valid-F.tiff  valid-FF.tiff
forSubmit/: .project  fig2.tif  fig3A.tif  fig3B.tif  fig4A.tif  fig4B.tif  fig5A.tif  fig5B.tif  fig5C.tif
forSubmit/allDocuments3/: OpenCFU.bbl  OpenCFU.tex  OpenCFU_Bib.bib  fig1.tif  fig3.tif  fig4.tif  fig5.tif  fig6.tif
forSubmit/arxiv/: OpenCFU.tex  fig2.eps  fig4B.eps  fig5A.eps  fig6.eps
m4/: aclocal.m4
packagingScripts/: Makefile-deb  OpenCFU.iss  OpenCFU_noVersion.iss  PKGBUILD  PKGBUILD.template  brew.rb  md5.txt  opencfu.desktop
packagingScripts/debian/: changelog  control  copyright  files  opencfu.substvars  rules
rebLetter/: OpenCFU.tex  OpenCFU_rev1.tex  rebLetter.tex
rebLetter_rev2/: OpenCFU.tex  rebLetter_rev2.tex
resources/: imageJmacro.txt  imageJmacroSpeed.java
rev3/: OpenCFU.tex  fig3B.eps  rebLetter.txt
samples/: references
src/: defines.hpp  main.cpp
src/classifier/: main.cpp  trainnedClassifier.xml
src/classifier/headers/: DataMaker.hpp
src/classifier/src/: DataMaker.cpp
src/gui/headers/: Gui_ColourCluster.hpp  Gui_ColourSelector.hpp  Gui_ColourWheel.hpp  Gui_ConfigIO.hpp  Gui_ControlPanel.hpp  Gui_Decorator.hpp  Gui_Display.hpp  Gui_DisplayBaseClass.hpp  Gui_DisplayRoi.hpp  Gui_HelloWindow.hpp  Gui_ImgFileSetter.hpp  Gui_LikFiltSelector.hpp  Gui_MaskSetter.hpp  Gui_MouseHandler.hpp  Gui_MyApplication.hpp  Gui_MyWindow.hpp  Gui_OptionSetterBaseClass.hpp  Gui_PixbufOpener.hpp  Gui_ProcessorHandler.hpp  Gui_RadiusSetter.hpp  Gui_ResultDetails.hpp  Gui_ResultDisplayBaseClass.hpp  Gui_ResultFileWriter.hpp  Gui_ResultFrame.hpp  Gui_ResultLabel.hpp  Gui_ResultListDisplay.hpp  Gui_ThresholdSetter.hpp  Gui_UserFilterSetter.hpp  ResultMap.hpp  headers - Shortcut.lnk  text.hpp
src/gui/src/: Gui_ColourCluster.cpp  Gui_ColourSelector.cpp  Gui_ColourWheel.cpp  Gui_ConfigIO.cpp  Gui_ControlPanel.cpp  Gui_Decorator.cpp  Gui_Display.cpp  Gui_DisplayBaseClass.cpp  Gui_DisplayRoi.cpp  Gui_HelloWindow.cpp  Gui_ImgFileSetter.cpp  Gui_LikFiltSelector.cpp  Gui_MaskSetter.cpp  Gui_MouseHandler.cpp  Gui_MyApplication.cpp  Gui_MyWindow.cpp  Gui_OptionSetterBaseClass.cpp  Gui_PixbufOpener.cpp  Gui_ProcessorHandler.cpp  Gui_RadiusSetter.cpp  Gui_ResultDetails.cpp  Gui_ResultDisplayBaseClass.cpp  Gui_ResultFileWriter.cpp  Gui_ResultFrame.cpp  Gui_ResultLabel.cpp  Gui_ResultListDisplay.cpp  Gui_ThresholdSetter.cpp  Gui_UserFilterSetter.cpp  ResultMap.cpp
src/processor/headers/: ArgumentParser.hpp  ContourFamily.hpp  ContourSpliter.hpp  Features.hpp  MaskROI.hpp  Predictor.hpp  ProcessingOptions.hpp  Processor.hpp  Result.hpp  Step_1.hpp  Step_2.hpp  Step_3.hpp  Step_4.hpp  Step_BaseClass.hpp  Step_ColourCluster.hpp  Step_FiltGUI.hpp  (+3 more)
test/: queries  stressTest.sh
website/: generateLandingPages.sh  index.php  tuto.php  uploadToSourceforge.sh
website/css/: demo.css  flexslider.css
website/extra/: text
website/htmlPortions/: banner.html  head.html  sidebar.html
website/pages/: devcorner.html  home.html  manual.html  samples.html  tuto.html
website/scripts/: load_navFuns.php  load_page.php  make_content.php  script.js
(+22 files in other folders)
